--- a/main_ko.html
+++ b/main_ko.html
@@ -45,8 +45,8 @@
 				<li><a href="#">마이페이지</a></li>
 				<li><a href="#">캠퍼스맵</a></li>
 				<li><a href="#">출퇴근</a></li>
-				<li><a href="#">ENG</a></li>
-				<li><a href="#" class="btn_logout"><span>로그아웃</span></a></li>
+				<li><a href="https://jiyea0904.github.io/snu_web/main_en">ENG</a></li>
+				<li><a href="https://jiyea0904.github.io/snu_web/login" class="btn_logout"><span>로그아웃</span></a></li>
 			</ul>
 		</div>
 	</div>
@@ -54,16 +54,16 @@
 	<div class="menu">
 		<div class="wrap">
 			<ul class="gnb">
-				<li><a href="#">학사/행정</a></li>
-				<li><a href="#">웹메일</a></li>
-				<li><a href="#">전자결재</a></li>
-				<li><a href="#">정보광장</a></li>
-				<li><a href="#">스누인지원</a></li>
-				<li><a href="#">캘린더</a></li>
-				<li><a href="#">캘린더</a></li>
-				<li><a href="#">캘린더캘린더캘린더캘린더</a></li>
-				<li><a href="#">캘린더</a></li>
-				<li><a href="#">캘린더</a></li>
+				<li><a href="https://jiyea0904.github.io/snu_web/boardList">학사/행정</a></li>
+				<li><a href="https://jiyea0904.github.io/snu_web/boardList">웹메일</a></li>
+				<li><a href="https://jiyea0904.github.io/snu_web/boardList">전자결재</a></li>
+				<li><a href="https://jiyea0904.github.io/snu_web/boardList">정보광장</a></li>
+				<li><a href="https://jiyea0904.github.io/snu_web/boardList">스누인지원</a></li>
+				<li><a href="https://jiyea0904.github.io/snu_web/boardList">캘린더</a></li>
+				<li><a href="https://jiyea0904.github.io/snu_web/boardList">캘린더</a></li>
+				<li><a href="https://jiyea0904.github.io/snu_web/boardList">캘린더캘린더캘린더캘린더</a></li>
+				<li><a href="https://jiyea0904.github.io/snu_web/boardList">캘린더</a></li>
+				<li><a href="https://jiyea0904.github.io/snu_web/boardList">캘린더</a></li>
 			</ul>
 			<div class="search_rank">
 				<p><em>01. </em><a href="#">전자결재</a></p>
